put overflow-x hidden css for sm media query back to general main layout to fix the bug with the chat button twitching

--- a/src/components/layout/layout.sass
+++ b/src/components/layout/layout.sass
@@ -42,4 +42,5 @@
         --os-size: 8px
         --os-handle-interactive-area-offset: 2px
     .main
+        overflow-x: hidden
         padding: 0 1em
