--- a/src/components/pages/catalog-page/catalog-page.sass
+++ b/src/components/pages/catalog-page/catalog-page.sass
@@ -38,7 +38,6 @@
 
 @media (max-width: 480px) 
     .catalog-page
-        overflow-x: hidden
         font-size: 10px
 
 @media (max-width: 320px) 
