--- a/src/components/pages/search-page/search-page.sass
+++ b/src/components/pages/search-page/search-page.sass
@@ -41,7 +41,6 @@
 
 @media (max-width: 480px) 
     .search-page
-        overflow-x: hidden
         font-size: 10px
 
 @media (max-width: 320px) 
